plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
    id "com.google.cloud.tools.jib" version "3.3.1"
}

group = 'com.thoroldvix'
version = '0.5.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}
jib {
    to {
        image = "registry.hub.docker.com/thorold/economatic"
    }
}
ext {
    testContainers = "1.17.5"
    mapStruct = "1.5.3.Final"
    springCloudVersion = "2022.0.0"
    caffeineCache = "3.1.6"
}
dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

dependencies {
    implementation 'com.google.guava:guava:32.0.1-jre'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.liquibase:liquibase-core'
    implementation "org.mapstruct:mapstruct:${mapStruct}"
    implementation "com.github.ben-manes.caffeine:caffeine:${caffeineCache}"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3"


    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStruct}"
    testImplementation "org.testcontainers:postgresql:${testContainers}"
    testImplementation "org.testcontainers:junit-jupiter:${testContainers}"
}

test {
    useJUnitPlatform()
}